--- a/disaster/src/app/app.component.html
+++ b/disaster/src/app/app.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarsExample07">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Checklist</a>
+          <a class="nav-link" [routerLink]="['/disaster/checklist']">Checklist</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My bag</a>
+          <a class="nav-link" [routerLink]="['/disaster/bag']">My bag</a>
         </li>
         
         <li class="nav-item dropdown">
