deleted the a tags & small errors

--- a/disaster/src/app/description/description.component.html
+++ b/disaster/src/app/description/description.component.html
@@ -89,11 +89,11 @@
                 <li>Keep important documents in a fireproof, safe place. Create password-protected digital copies.</li>
                 <li>Use fire-resistant materials to build, renovate, or make repairs.</li>
                 <li>Find an outdoor water source with a hose that can reach any area of your property.</li>
-                <li>Create a fire-resistant zone </a>that is free of leaves, debris, or flammable materials for at least 30
+                <li>Create a fire-resistant zone that is free of leaves, debris, or flammable materials for at least 30
                     feet
                     from your home.</li>
                 <li>Review insurance coverage to make sure it is enough to replace your property.</li>
-                <li>Pay attention to air quality alerts. </a></li>
+                <li>Pay attention to air quality alerts.</li>
             </ul>
         <h3>Survive During</h3>
             <ul>
@@ -114,9 +114,7 @@
                     burn you or spark another fire. Consider the danger to pets and livestock.</li>
                 <li>Send text messages or use social media to reach out to family and friends. Phone systems are often busy
                     following a disaster. Make calls only in emergencies.</li>
-                <li>
-                    <p>Wear a NIOSH certified-respirator and wet debris down to minimize breathing dust particles.</p>
-                </li>
+                <li>Wear a NIOSH certified-respirator and wet debris down to minimize breathing dust particles.</li>
                 <li>Document property damage with photographs. Conduct an inventory and contact your insurance company for
                     assistance.</li>
                 <li>Wildfires dramatically change landscape and ground conditions, which can lead to increased risk of flooding
@@ -208,7 +206,7 @@
                 <li>Sign up for your community’s warning system. The Emergency Alert System (EAS) and National Oceanic and
                     Atmospheric Administration (NOAA) Weather Radio also provide emergency alerts.</li>
                 <li>If flash flooding is a risk in your location, then monitor potential signs, such as heavy rain.</li>
-                <li>Learn and practice evacuation routes</a>, shelter plans, and flash flood response.</li>
+                <li>Learn and practice evacuation routes, shelter plans, and flash flood response.</li>
                 <li>>Gather supplies in case you have to leave immediately, or if services are cut off. Keep in mind each
                     person’s specific needs, including medication. Don’t forget the needs of pets. Obtain extra batteries and
                     charging devices for phones and other critical equipment.</li>
@@ -249,8 +247,8 @@
         <h2>Nuclear Radiation: being prepared in advance in case of Radiological Dispersion Device (RDD) Event</h2>
         <img src="C:\Users\cherr\OneDrive\Desktop\nuclear.jpg" alt="nuclear_radiation">  
             <ul>
-                <li>Build an Emergency Supply Kit</a> with the addition of duct tape and scissors.</li>
-                <li>Make a Family Emergency Plan</a>.</li>
+                <li>Build an Emergency Supply Kit with the addition of duct tape and scissors.</li>
+                <li>Make a Family Emergency Plan.</li>
                 <li>Find out from officials if any public buildings in your community have been designated as fallout shelters.
                     If none have been designated, make your own list of potential shelters near your home, workplace, and
                     school, such as basements, subways, tunnels, or the windowless center area of middle floors in high-rise
