put photos in asset folder

--- a/disaster/src/app/description/description.component.html
+++ b/disaster/src/app/description/description.component.html
@@ -12,7 +12,7 @@
     <body>
         <h1>Precautions for Safety</h1>
         <h2>Tornado Warning: find a shelter right away</h2>
-            <img src="C:\Users\cherr\OneDrive\Desktop\tornado.jpg" alt="tornado">
+            <img src="/disaster/disaster/src/assets/tornado.jpg" alt="tornado">
             <ul>
                 <li>If you are in a building with no basement, then get to a small interior room on the lowest level.</li>
                 <li>Go to a safe room, basement, or storm cellar.</li>
@@ -66,7 +66,7 @@
             </ul>
 
         <h2>Wildfires Warning: get to safety right away</h2>
-            <img src="C:\Users\cherr\OneDrive\Desktop\fire.jpg" alt="fire">
+            <img src="/disaster/disaster/src/assets/fire.jpg" alt="fire">
             <ul>
                 <li>Leave if told to do so.</li>
                 <li>If trapped, call 9-1-1.</li>
@@ -126,7 +126,7 @@
             </ul>
 
         <h2> Earthquake Warning: drop, cover, and hold on</h2>
-        <img src="C:\Users\cherr\OneDrive\Desktop\earthquake.jpg" alt="earthquake">
+        <img src="/disaster/disaster/src/assets/earthquake.jpg" alt="earthquake">
             <ul>
                 <li>If in a vehicle, pull over and stop.</li>
                 <li>If in bed, stay there.</li>
@@ -190,7 +190,7 @@
             </ul>
 
         <h2>Floods Warning: find shelter right away</h2>
-        <img src="C:\Users\cherr\OneDrive\Desktop\flood.jpg" alt="flood">
+        <img src="/disaster/disaster/src/assets/flood.jpg" alt="flood">
             <ul>
                 <li>Do not walk, swim, or drive through flood waters<strong>. Turn Around, Don’t Drown!</strong></li>
                 <li>Just six inches of moving water can knock you down, and one foot of moving water can sweep your vehicle
@@ -245,7 +245,7 @@
             </ul>
 
         <h2>Nuclear Radiation: being prepared in advance in case of Radiological Dispersion Device (RDD) Event</h2>
-        <img src="C:\Users\cherr\OneDrive\Desktop\nuclear.jpg" alt="nuclear_radiation">  
+        <img src="/disaster/disaster/src/assets/nuclear.jpg" alt="nuclear_radiation">  
             <ul>
                 <li>Build an Emergency Supply Kit with the addition of duct tape and scissors.</li>
                 <li>Make a Family Emergency Plan.</li>
