fix home page and nav bar

--- a/disaster/src/app/welcome/welcome.component.html
+++ b/disaster/src/app/welcome/welcome.component.html
@@ -9,7 +9,7 @@
                     <div class="col-sm">
                     </div>
                     <div class="col-sm">
-                        <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center">GET START</button>
+                        <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/home']" >GET STARTED</button>
                     </div>
                     <div class="col-sm">
                     </div>
