--- a/disaster/src/app/app.component.html
+++ b/disaster/src/app/app.component.html
@@ -13,18 +13,10 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/disaster/bag']">My bag</a>
         </li>
-        
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            Disaster Description
-            
-          </a>
-          <div class="dropdown-menu" >
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Action</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/disaster/description']">Disaster Description</a>
         </li>
+        
       </ul>
     </div>
   </div>
