--- a/disaster/src/app/home/home.component.html
+++ b/disaster/src/app/home/home.component.html
@@ -1,4 +1,59 @@
-<div class="container">
-  <h1>Choose Your Disaster</h1>
-  
-</div>
+<header>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <!-- Slide One - Set the background image for this slide in the line below -->
+      <div class="carousel-item active" style="background-image:url('../../assets/tornado.jpg') ">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Tornado</h3>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+          </div>
+      </div>
+      <!-- Slide Two - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-image: url('../../assets/fire.jpg')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Fire</h3>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+        </div>
+      </div>
+      <!-- Slide Three - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-image: url('../../assets/flood.jpg')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Flood</h3>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+        </div>
+      </div>
+      <div class="carousel-item " style="background-image: url('../../assets/earthquake.jpg')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Earth Quake</h3>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+        </div>
+      </div>
+      <div class="carousel-item " style="background-image: url('../../assets/nuclearright.jpg')">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Nuclear Radiation</h3>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</header>
