--- a/disaster/src/app/description/description.component.css
+++ b/disaster/src/app/description/description.component.css
@@ -1,5 +1,6 @@
 h1{
-    color: black;
+    /* color: black; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 img{
@@ -11,6 +12,87 @@ img{
 }
 
 body{
-    background-color: #82a7ff;
+    background-color: #7BFFC3;
     
+}
+#tornado{
+    background-image: url(../../assets/tornado_bg.jpg);
+    background-color: #000000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: black;
+}
+#wildfire{
+    background-image: url(../../assets/wildfire_bg.jpg);
+    background-color: #000000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: #7BFFC3;
+}
+#earthquake{
+    background-image: url(../../assets/earthquake_bg.jpg);
+    background-color: #000000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: #7BFFC3;
+}
+#flood{
+    background-image: url(../../assets/flood_bg.JPG);
+    background-color: #000000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: #7BFFC3;
+}
+#nuke{
+    background-image: url(../../assets/nuke_bg.jpg);
+    background-color: #000000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: #7BFFC3;
+}
+
+.tornado{
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.centro2{
+    color: #7BFFC3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.centro{
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:hsla(120, 100%, 75%, 0.3);
+
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+ul, li{
+    border: 1px solid #000000;
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+    bottom: 30px;
+    background-color:hsla(120, 100%, 75%, 0.3);
 }
