--- a/disaster/src/app/bag/bag.component.html
+++ b/disaster/src/app/bag/bag.component.html
@@ -15,7 +15,7 @@
       <h2>My Bag</h2>
       <ul class="list-group">
           <li class="list-group-item d-flex justify-content-between align-items-center">
-              A Large Bag of Weed
+              A Large Bag of Food
             <span class="badge badge-primary badge-pill">1</span>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
