--- a/disaster/src/app/checklist/checklist.component.html
+++ b/disaster/src/app/checklist/checklist.component.html
@@ -61,9 +61,9 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="control-label col-sm-2" for="name">Weight:</label>
+          <label class="control-label col-sm-2" for="weight">Weight:</label>
           <div class="col-sm-5">
-            <input type="text" class="form-control" name="newBag.weight"  [(ngModel)]="newBag.weight" placeholder="Enter weight">
+            <input type="number" class="form-control" name="newBag.weight"  [(ngModel)]="newBag.weight" placeholder="Enter weight">
           </div>
         </div>
         <div class="form-group">        
