Routed all the disatster components. Added HTML and CSS to each page.

--- a/disaster/src/app/earthquake/earthquake.component.html
+++ b/disaster/src/app/earthquake/earthquake.component.html
@@ -1,3 +1,156 @@
-<p>
-  earthquake works!
-</p>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Earthquake Precautions</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="">
+</head>
+
+<body>
+  <!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+  <div class="container" style="padding: 30px">
+    <div class="row" class="centro2" style="color: black">
+      <div class="col">
+
+      </div>
+      <div class="col-5">
+        <h1 class="centro2" style="color: black">Disasters Description</h1>
+      </div>
+      <div class="col">
+
+      </div>
+    </div>
+  </div>
+  <div class="jumbotron12" id="earthquake" style="padding: 30px 0px;">
+
+
+
+
+    <h1 class="display-1 tornado">Earthquake</h1>
+
+    <hr class="my-4">
+    <p class="centro"> Earthquake Warning: drop, cover, and hold on</p>
+    <div class="container" style="padding: 30px">
+      <div class="row" class="centro2" style="color: black">
+        <div class="col">
+
+        </div>
+        <div class="col-5">
+          <img class="center" src="../../assets/earthquake.jpg" alt="tornado">
+        </div>
+        <div class="col">
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container" style="padding: 30px">
+      <div class="row" class="centro2" style="color: black">
+        <div class="col">
+          <h3 class="centro" style="color: black">Precautions for Safety</h3>
+        </div>
+        <div class="col-5">
+          <h3 class="centro" style="color: black">Prepare Now</h3>
+        </div>
+        <div class="col">
+          <h3 class="centro">Survive During</h3>
+        </div>
+      </div>
+    </div>
+    <div class="container" style="padding: 30px">
+      <div class="row" style="color: black; vertical-align: top">
+        <div class="col">
+          <ul>
+            <li>If in a vehicle, pull over and stop.</li>
+            <li>If in bed, stay there.</li>
+            <li>If outdoors, stay outdoors.</li>
+            <li>Do not get in a doorway.</li>
+            <li>Do not run outside.</li>
+          </ul>
+
+        </div>
+        <div class="col-5">
+          <ul style="vertical-align: text-top">
+            <li>Secure items, such as televisions, and objects that hang on walls. Store heavy and breakable objects on
+              low
+              shelves.</li>
+            <li>Practice <strong>Drop, Cover, then Hold On</strong> with family and coworkers. Drop to your hands and
+              knees.
+              Cover your head and neck with your arms. Crawl only as far as needed to reach cover from falling
+              materials.
+              Hold on to any sturdy furniture until the shaking stops.</li>
+            <li>Create a family emergency communications plan that has an out-of-state contact. Plan where to meet if
+              you
+              get
+              separated.</li>
+            <li>Make a supply kit that includes enough food and water for at least three days, a flashlight, a fire
+              extinguisher, and a whistle. Consider each person’s specific needs, including medication. Do not forget
+              the
+              needs of pets. Have extra batteries and charging devices for phones and other critical equipment.</li>
+            <li>Consider obtaining an earthquake insurance policy. Standard homeowner’s insurance does not cover
+              earthquake
+              damage.</li>
+            <li>Consider a retrofit of your building to correct structural issues that make it vulnerable to collapse
+              during an
+              earthquake.</li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul>
+            <li><strong>Drop, Cover, then Hold On</strong> like you practiced. Drop to your hands and knees. Cover your
+              head and neck with your arms. Hold on to any sturdy furniture until the shaking stops. Crawl only if you
+              can reach better cover without going through an area with more debris.</li>
+            <li>If in bed, stay there and cover your head and neck with a pillow.</li>
+            <li>If inside, stay there until the shaking stops. DO NOT run outside.</li>
+            <li>If in a vehicle, stop in a clear area that is away from buildings, trees, overpasses, underpasses, or
+              utility wires.</li>
+            <li>If you are in a high-rise building, expect fire alarms and sprinklers to go off. Do not use elevators.</li>
+            <li>If near slopes, cliffs, or mountains, be alert for falling rocks and landslides.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 offset-md-3 centro" style="color: black">
+        <h3>Be Safe After</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 offset-md-3 centro2" style="color: black">
+        <ul>
+          <li>Expect aftershocks to follow the largest shock of an earthquake.</li>
+          <li>Check yourself for injury and provide assistance to others if you have training.</li>
+          <li>If in a damaged building, go outside and quickly move away from the building.</li>
+          <li>Do not enter damaged buildings.</li>
+          <li>If you are trapped, cover your mouth. Send a text, bang on a pipe or wall, or use a whistle instead of
+            shouting
+            so that rescuers can locate you.</li>
+          <li>If you are in an area that may experience tsunamis, go inland or to higher ground immediately after the
+            shaking
+            stops.</li>
+          <li>Save phone calls for emergencies.</li>
+          <li>>Once safe, monitor local news reports via battery operated radio, TV, social media, and cell phone text
+            alerts for emergency information and instructions.</li>
+          <li>Use extreme caution during post-disaster clean-up of buildings and around debris. Do not attempt to
+            remove
+            heavy debris by yourself. Wear protective clothing, including a long-sleeved shirt, long pants, work
+            gloves, and sturdy, thick-soled shoes during clean-up.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <script src="" async defer></script>
+</body>
+
+</html>
