--- a/disaster/src/app/fire/fire.component.html
+++ b/disaster/src/app/fire/fire.component.html
@@ -1,3 +1,122 @@
-<p>
-  fire works!
-</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Fire Precautions</title>
+</head>
+
+<body>
+  <div class="jumbotron12" id="wildfire" style="padding: 30px 0px;">
+
+
+
+
+    <h1 class="display-1 tornado">Wildfire</h1>
+
+    <hr class="my-4">
+    <p class="centro">Wildfires Warning: get to safety right away</p>
+    <div class="container" style="padding: 30px">
+      <div class="row" class="centro2" style="color: black">
+        <div class="col">
+
+        </div>
+        <div class="col-5">
+          <img class="center" src="../../assets/fire.jpg" alt="tornado">
+        </div>
+        <div class="col">
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container" style="padding: 30px">
+      <div class="row" class="centro2" style="color: black">
+        <div class="col">
+          <h3 class="centro" style="color: black">Precautions for Safety</h3>
+        </div>
+        <div class="col-5">
+          <h3 class="centro" style="color: black">Prepare Now</h3>
+        </div>
+        <div class="col">
+          <h3 class="centro">Survive During</h3>
+        </div>
+      </div>
+    </div>
+    <div class="container" style="padding: 30px">
+      <div class="row" style="color: black; vertical-align: top">
+        <div class="col">
+          <ul>
+            <li>Leave if told to do so.</li>
+            <li>If trapped, call 9-1-1.</li>
+            <li>Listen for emergency information and alerts.</li>
+            <li>Use N95 masks to keep particles out of the air you breathe.</li>
+          </ul>
+        </div>
+        <div class="col-5">
+          <ul style="vertical-align: text-top">
+            <li>Sign up for your community’s warning system. The Emergency Alert System (EAS) and National Oceanic and
+              Atmospheric Administration (NOAA) Weather Radio also provide emergency alerts.</li>
+            <li>Know your community’s evacuation plans and find several ways to leave the area. Drive the evacuation
+              routes
+              and find shelter locations. Have a plan for pets and livestock.</li>
+            <li>Gather emergency supplies, including N95 respirator masks that filter out particles in the air you
+              breathe.
+              Keep in mind each person’s specific needs, including and updated asthma action plan
+              and medication. Don’t forget the needs of pets.</li>
+            <li>Designate a room that can be closed off from outside air. Close all doors and windows. Set up a
+              portable
+              air
+              cleaner to keep indoor pollution levels low when smoky conditions exist.</li>
+            <li>Keep important documents in a fireproof, safe place. Create password-protected digital copies.</li>
+            <li>Use fire-resistant materials to build, renovate, or make repairs.</li>
+            <li>Find an outdoor water source with a hose that can reach any area of your property.</li>
+            <li>Create a fire-resistant zone that is free of leaves, debris, or flammable materials for at least 30
+              feet
+              from your home.</li>
+            <li>Review insurance coverage to make sure it is enough to replace your property.</li>
+            <li>Pay attention to air quality alerts.</li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul>
+            <li>Evacuate immediately if authorities tell you to do so.</li>
+            <li>If trapped, then call 911 and give your location, but be aware that emergency response could be delayed
+              or
+              impossible. Turn on lights to help rescuers find you.</li>
+            <li>Listen to EAS, NOAA Weather Radio, or local alerting systems for current emergency information and
+              instructions.</li>
+            <li>Use an N95 masks to keep harmful particles out of the air you breathe.</li>
+            <li>If you are not ordered to evacuate but smoky conditions exist, stay inside in a safe location or go to
+              a
+              community building where smoke levels are lower.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 offset-md-3 centro" style="color: black">
+        <h3>Be Safe After</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 offset-md-3 centro2" style="color: black">
+        <ul>
+          <li>Keep listening to EAS, NOAA Weather Radio, and local authorities for updated information.</li>
+          <li>If you are trapped, cover your mouth with a cloth or mask to avoid breathing dust. Try to send a text,
+            bang
+            on a pipe or wall, or use a whistle instead of shouting.</li>
+          <li>Stay clear of fallen power lines or broken utility lines.</li>
+          <li>Do not enter damaged buildings until you are told that they are safe.</li>
+          <li>Save your phone calls for emergencies. Phone systems are often down or busy after a disaster. Use text
+            messaging or social media to communicate with family and friends.</li>
+          <li>Be careful during clean-up. Wear thick-soled shoes, long pants, and work gloves.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
