--- a/disaster/src/app/home/home.component.html
+++ b/disaster/src/app/home/home.component.html
@@ -13,7 +13,7 @@
         <div class="carousel-caption d-none d-md-block">
           <h3>Tornado</h3>
           <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/tornado']" >I want to learn about this disaster.</button>
           </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
@@ -21,7 +21,7 @@
         <div class="carousel-caption d-none d-md-block">
           <h3>Fire</h3>
           <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/fire']" >I want to learn about this disaster.</button>
         </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
@@ -29,21 +29,21 @@
         <div class="carousel-caption d-none d-md-block">
           <h3>Flood</h3>
           <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/flood']" >I want to learn about this disaster.</button>
         </div>
       </div>
       <div class="carousel-item " style="background-image: url('../../assets/earthquake.jpg')">
         <div class="carousel-caption d-none d-md-block">
           <h3>Earth Quake</h3>
           <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/earthquake']" >I want to learn about this disaster.</button>
         </div>
       </div>
       <div class="carousel-item " style="background-image: url('../../assets/nuclearright.jpg')">
         <div class="carousel-caption d-none d-md-block">
           <h3>Nuclear Radiation</h3>
           <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/description']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/nuclear']" >I want to learn about this disaster.</button>
         </div>
       </div>
     </div>
