Added Youtube to the Nuke description page.

--- a/disaster/src/app/nuclear/nuclear.component.html
+++ b/disaster/src/app/nuclear/nuclear.component.html
@@ -46,9 +46,13 @@
 
         </div>
         <div class="col-5">
-          <img class="center" src="../../assets/nuclear.jpg" alt="tornado">
+          <img class="center" src="../../assets/radiation symbol.jpg" alt="photo of nuclear symbol">
         </div>
         <div class="col">
+          <div class="max-width-1024">
+            <div class="embed-responsive embed-responsive-16by9" id="player">
+            </div>
+          </div>
 
         </div>
       </div>
