--- a/disaster/src/app/app.component.html
+++ b/disaster/src/app/app.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link" [routerLink]="['/disaster/bag']">My bag</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/disaster/description']">Disaster Description</a>
+          <a class="nav-link" [routerLink]="['/disaster/description']">Disaster Descriptions</a>
         </li>
         
       </ul>
