--- a/disaster/src/app/flood/flood.component.html
+++ b/disaster/src/app/flood/flood.component.html
@@ -45,7 +45,10 @@
           <img class="center" src="../../assets/flood.jpg" alt="tornado">
         </div>
         <div class="col">
-
+          <div class="max-width-1024">
+              <div class="embed-responsive embed-responsive-16by9" id="player">
+              </div>
+            </div>
         </div>
       </div>
     </div>
