--- a/disaster/src/app/earthquake/earthquake.component.html
+++ b/disaster/src/app/earthquake/earthquake.component.html
@@ -50,7 +50,10 @@
           <img class="center" src="../../assets/earthquake.jpg" alt="tornado">
         </div>
         <div class="col">
-
+            <div class="max-width-1024">
+              <div class="embed-responsive embed-responsive-16by9" id="player">
+              </div>
+            </div>
         </div>
       </div>
     </div>
