--- a/disaster/src/app/fire/fire.component.html
+++ b/disaster/src/app/fire/fire.component.html
@@ -27,7 +27,11 @@
           <img class="center" src="../../assets/fire.jpg" alt="tornado">
         </div>
         <div class="col">
-
+            <div class="max-width-1024">
+              <div class="embed-responsive embed-responsive-16by9" id="player">
+              </div>
+            </div>
+    
         </div>
       </div>
     </div>
