--- a/disaster/src/app/tornado/tornado.component.html
+++ b/disaster/src/app/tornado/tornado.component.html
@@ -35,6 +35,10 @@
                 <img class="center" src="../../assets/tornado.jpg" alt="tornado">
             </div>
             <div class="col">
+                <div class="max-width-1024">
+                    <div class="embed-responsive embed-responsive-16by9" id="player">
+                    </div>
+                </div> 
             
             </div>
         </div>
