--- a/disaster/src/app/description/description.component.html
+++ b/disaster/src/app/description/description.component.html
@@ -520,7 +520,7 @@
 
         </div>
         <div class="col-5">
-          <img class="center" src="../../assets/nuclear.jpg" alt="tornado">
+          <img class="center" src="../../assets/radiation symbol.jpg" alt="tornado">
         </div>
         <div class="col">
 
