--- a/disaster/src/app/checklist/checklist.component.html
+++ b/disaster/src/app/checklist/checklist.component.html
@@ -14,15 +14,19 @@
     <div class="container">
       <h2>Disaster Checklist</h2>
       <h3>Disaster</h3>
-      <form class="form-horizontal">
-        <div class="form-group">        
-          <div class="col-sm-offset-2 col-sm-10">
-            <div class="checkbox">
-              <label><input type="checkbox" name="remember">Item 1</label>
+      <form class="form-horizontal" (submit)="sendWholeBag()">
+        <!-- forloop starts -->
+        <div *ngFor="let kek of kekBag.myBag">
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <div class="checkbox">
+                <label><input type="checkbox" name="remember"> {{kek.item}} ({{kek.weight}} lbs)</label>
+              </div>
             </div>
           </div>
         </div>
-        <div class="form-group">        
+        <!-- forloop ends -->
+        <!-- <div class="form-group">        
           <div class="col-sm-offset-2 col-sm-10">
             <div class="checkbox">
               <label><input type="checkbox" name="remember">Item 2</label>
@@ -42,13 +46,27 @@
               <label><input type="checkbox" name="remember">Item 4</label>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="form-group">        
           <div class="col-sm-offset-2 col-sm-10 ">
-            <button type="submit" class="btn btn-primary">Add to Bag</button>
+            <button type="submit" class="btn btn-primary">Update Bag</button>
           </div>
         </div>
       </form>
+
+
+      <!-- 
+        <form (submit) = "updateRestaurant()">
+          <p>Restaurant Name: <input type="text" name="name" [(ngModel)]="restaurant.name"></p>
+          <p *ngIf="restaurant.name.length < 4">Restaurant name must be at least 3 characters long</p>
+          <p>Cuisine: <input type="text" name="cuisine" [(ngModel)]="restaurant.cuisine"></p>
+          <p *ngIf="restaurant.cuisine.length < 4">Cuisine must be at least 3 characters long</p>
+          <a [routerLink]="['/restaurants']">Cancel </a>
+          <input type="submit" >
+        </form> -->
+
+
+
     </div>>
     <div class="container">
       {{ newBag | json }}
@@ -63,7 +81,7 @@
         <div class="form-group">
           <label class="control-label col-sm-2" for="weight">Weight:</label>
           <div class="col-sm-5">
-            <input type="number" class="form-control" name="newBag.weight"  [(ngModel)]="newBag.weight" placeholder="Enter weight">
+            <input type="number" class="form-control" name="newBag.weight" [(ngModel)]="newBag.weight" placeholder="Enter weight">
           </div>
         </div>
         <div class="form-group">        
@@ -80,5 +98,11 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
+    <br>
+    <app-bag></app-bag>
+
+    {{returnbag | json}}
+  
   </body>
 </html>
