--- a/disaster/src/app/bag/bag.component.html
+++ b/disaster/src/app/bag/bag.component.html
@@ -14,18 +14,23 @@
     <div class="container">
       <h2>My Bag</h2>
       <ul class="list-group">
+        <!-- loop starts -->
+        <div *ngFor="let each of receivedBag.myBag; let i = index;">
           <li class="list-group-item d-flex justify-content-between align-items-center">
-              A Large Bag of Food
-            <span class="badge badge-primary badge-pill">1</span>
+              {{ each.item }}
+            <span class="badge badge-primary badge-pill">{{ each.weight }}</span>
           </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
+        </div>
+        <!-- end of forloop -->
+
+          <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
             From the Backend
             <span class="badge badge-primary badge-pill">2</span>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
               From the Backend
             <span class="badge badge-primary badge-pill">3</span>
-          </li>
+          </li> -->
         </ul>
     </div>
 
