--- a/disaster/src/app/checklist/checklist.component.html
+++ b/disaster/src/app/checklist/checklist.component.html
@@ -105,7 +105,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   
     <br>
-    <app-bag></app-bag>
+    <app-bag *ngIf="returnbag" [receivedBag]="returnbag"></app-bag>
 
     {{returnbag | json}}
   
