Cleaned up HTML

--- a/disaster/src/app/home/home.component.html
+++ b/disaster/src/app/home/home.component.html
@@ -12,38 +12,48 @@
       <div class="carousel-item active" style="background-image:url('../../assets/tornado.jpg') ">
         <div class="carousel-caption d-none d-md-block">
           <h3>Tornado</h3>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/tornado']" >I want to learn about this disaster.</button>
-          </div>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center"
+            [routerLink]="['/disaster/checklist']">Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center"
+            [routerLink]="['/disaster/tornado']">I want to learn about this disaster.</button>
+        </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('../../assets/fire.jpg')">
         <div class="carousel-caption d-none d-md-block">
           <h3>Fire</h3>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/fire']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center"
+            [routerLink]="['/disaster/checklist']">Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center"
+            [routerLink]="['/disaster/fire']">I want to learn about this disaster.</button>
         </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('../../assets/flood.jpg')">
         <div class="carousel-caption d-none d-md-block">
           <h3>Flood</h3>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/flood']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center"
+            [routerLink]="['/disaster/checklist']">Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center"
+            [routerLink]="['/disaster/flood']">I want to learn about this disaster.</button>
         </div>
       </div>
       <div class="carousel-item " style="background-image: url('../../assets/earthquake.jpg')">
         <div class="carousel-caption d-none d-md-block">
           <h3>Earth Quake</h3>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/earthquake']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center"
+            [routerLink]="['/disaster/checklist']">Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center"
+            [routerLink]="['/disaster/earthquake']">I want to learn about this disaster.</button>
         </div>
       </div>
       <div class="carousel-item " style="background-image: url('../../assets/nuclearright.jpg')">
         <div class="carousel-caption d-none d-md-block">
           <h3>Nuclear Radiation</h3>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center" [routerLink]="['/disaster/checklist']" >Go to my bag checklist to get ready!</button>
-          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center" [routerLink]="['/disaster/nuclear']" >I want to learn about this disaster.</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-danger center-block" style="align-content: center"
+            [routerLink]="['/disaster/checklist']">Go to my bag checklist to get ready!</button>
+          <button type="button" class="rounded mx-auto d-block" class="btn btn-outline-warning center-block" style="align-content: center"
+            [routerLink]="['/disaster/nuclear']">I want to learn about this disaster.</button>
         </div>
       </div>
     </div>
