Updated earthquake a tag and Fire component YouTube video

--- a/disaster/src/app/earthquake/earthquake.component.html
+++ b/disaster/src/app/earthquake/earthquake.component.html
@@ -48,6 +48,7 @@
         </div>
         <div class="col-5">
           <img class="center" src="../../assets/earthquake.jpg" alt="tornado">
+          <a href="https://www.earthquakecountry.org/library/StayingSafeWhereTheEarthShakes_SouthernCaliforniaCoastEdition.pdf">Staying SafeWhere The Earth Shakes Southern California Coast Edition</a>
         </div>
         <div class="col">
           <div class="max-width-1024">
