--- a/disaster/src/app/bag/bag.component.html
+++ b/disaster/src/app/bag/bag.component.html
@@ -1,26 +1,20 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>My Bag</title>
-  </head>
-  <body>
-    <div class="container">
+     <!-- <div class="col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
+    
       <h2>My Bag</h2>
       <ul class="list-group">
-        <!-- loop starts -->
+        loop starts
         <div *ngFor="let each of receivedBag.myBag; let i = index;">
           <li class="list-group-item d-flex justify-content-between align-items-center">
               {{ each.item }}
             <span class="badge badge-primary badge-pill">{{ each.weight }}</span>
           </li>
+        
         </div>
+      </ul>
+      
+    </div> -->
+   
         <!-- end of forloop -->
 
           <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -31,16 +25,16 @@
               From the Backend
             <span class="badge badge-primary badge-pill">3</span>
           </li> -->
-        </ul>
-    </div>
+        
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
-</html>
+</html> -->
 
 
 
