--- a/disaster/src/app/fire/fire.component.css
+++ b/disaster/src/app/fire/fire.component.css
@@ -56,3 +56,9 @@ ul, li{
 .max-width-1024{
     max-width: 1024px; margin: 0 auto;
 }
+img.panel-slideshow-image {
+    margin-left: 1rem;
+}
+span.range-label-middle {
+    margin-left: 10em;
+}
