--- a/disaster/src/app/fire/fire.component.html
+++ b/disaster/src/app/fire/fire.component.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fire Precautions</title>
+  <link rel="stylesheet" href="https://earthobservatory.nasa.gov/css/arthref.min.css">
+  <link rel="stylesheet" href="https://earthobservatory.nasa.gov/css/rangeslider.css">
 </head>
 
 <body>
@@ -28,12 +30,11 @@
         </div>
         <div class="col">
           <!-- YoutTube player start -->
-            <div class="max-width-1024">
-              <div class="embed-responsive embed-responsive-16by9" id="player">
-              </div>
-          <!-- YoutTube player End -->
+          <div class="max-width-1024">
+            <div class="embed-responsive embed-responsive-16by9" id="player">
             </div>
-    
+            <!-- YoutTube player End -->
+          </div>
         </div>
       </div>
     </div>
@@ -123,6 +124,39 @@
       </div>
     </div>
   </div>
+  
+  <div>
+      <div class="row">
+          <div class="col-md-6 offset-md-3 centro" style="color: black">
+            <h3>Fires around the world for 2018</h3>
+          </div>
+        </div>
+    
+      <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-01.JPEG" 
+      alt="Global Map Fire Image 215" data-value="215">
+    <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-02.JPEG"
+      alt="Global Map Fire Image 216" data-value="216">
+    <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-03.JPEG"
+      alt="Global Map Fire Image 217" data-value="217">
+    <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-04.JPEG"
+      alt="Global Map Fire Image 218" data-value="218">
+    <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-05.JPEG"
+      alt="Global Map Fire Image 219" data-value="219">
+    <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-06.JPEG"
+      alt="Global Map Fire Image 220" data-value="220">
+    <img class="panel-slideshow-image" src="https://eoimages.gsfc.nasa.gov/images/globalmaps/data/MOD14A1_M_FIRE/MOD14A1_M_FIRE_2018-07.JPEG"
+      alt="Global Map Fire Image 221" data-value="221"> 
+  </div>
+  <div>
+    <span class="range-label-middle" data-value="215">January 2018</span>
+    <span class="range-label-middle" data-value="216">February 2018</span>
+    <span class="range-label-middle" data-value="217">March 2018</span>
+    <span class="range-label-middle" data-value="218">April 2018</span>
+    <span class="range-label-middle" data-value="219">May 2018</span>
+    <span class="range-label-middle" data-value="220">June 2018</span>
+    <span class="range-label-middle" data-value="221">July 2018</span>
+  </div>
 </body>
 
 </html>
+
