--- a/disaster/src/app/checklist/checklist.component.html
+++ b/disaster/src/app/checklist/checklist.component.html
@@ -13,11 +13,7 @@
   <body>
       
     <div class="container">
-        
-
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-            Ma Bag
-          </button>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Ma Bag</button>
       <h2>Disaster Checklist</h2>
       <h3>Disaster</h3>
       <form class="form-horizontal" (submit)="sendWholeBag()">
@@ -78,7 +74,7 @@
 
 
 
-    </div>>
+    </div>
     <div class="container">
       <!-- {{ newBag | json }} -->
         <h2>Add Custom Options</h2>
