fixed bug regarding passing an object by value in checklist, so adding items in checklist is fully functional

--- a/disaster/src/app/bag/bag.component.css
+++ b/disaster/src/app/bag/bag.component.css
@@ -1,7 +1,7 @@
 * {
     margin: 0px;
     border: 0px;     
-    border: 1px solid pink;   
+    /* border: 1px solid pink;    */
 }
 /* .container {
     margin-left: 200px;
