--- a/disaster/src/app/checklist/checklist.component.html
+++ b/disaster/src/app/checklist/checklist.component.html
@@ -50,8 +50,8 @@
             </div>
           </div>
         </div> -->
-        <!-- {{ testbag | json }} -->
-        {{ indexes | json }}
+
+        <!-- {{ indexes | json }} -->
         <div class="form-group">        
           <div class="col-sm-offset-2 col-sm-10 ">
             <button type="submit" class="btn btn-primary">Update Bag</button>
@@ -74,8 +74,8 @@
 
     </div>>
     <div class="container">
-      {{ newBag | json }}
-        <h2>Add new item</h2>
+      <!-- {{ newBag | json }} -->
+        <h2>Add Custom Options</h2>
       <form class="form-horizontal" (submit)="addBag()">
         <div class="form-group">
           <label class="control-label col-sm-2" for="name">Item Name:</label>
@@ -98,6 +98,36 @@
       </form>
     </div>
 
+
+
+    <h2>Your Custom Checklist</h2>
+    <!-- {{plainAdds2 | json }} -->
+    <form class="form-horizontal" (submit)="sendCustom()">
+    <!-- <form class="form-horizontal" (submit)="testfunction()"> -->
+      <!-- forloop starts -->
+      <!-- <div *ngFor="let kek of kekBag.myBag; let i = index;trackBy:trackByIdx"> -->
+      <div *ngFor="let plain of plainAdds2; let i = index;">
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+              <label><input type="checkbox" value="1" [(ngModel)]="indexes2[i]" [ngModelOptions]="{standalone: true}"> {{plain.item}} ({{plain.weight}} lbs)</label>
+            </div>
+          </div>
+        </div>
+      </div> 
+      <!-- forloop ends -->
+
+      <!-- {{ indexes2 | json }} -->
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10 ">
+          <button type="submit" class="btn btn-primary">Update Bag</button>
+        </div>
+      </div>
+    </form>
+
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -107,7 +137,7 @@
     <br>
     <app-bag *ngIf="returnbag" [receivedBag]="returnbag"></app-bag>
 
-    {{returnbag | json}}
+    <!-- {{returnbag | json}} -->
   
   </body>
 </html>
