added delete function

--- a/disaster/src/app/checklist/checklist.component.html
+++ b/disaster/src/app/checklist/checklist.component.html
@@ -167,7 +167,7 @@
     
     <!-- <app-bag *ngIf="returnbag" [receivedBag]="returnbag"></app-bag> -->
 
-    {{returnbag | json}}
+    <!-- {{returnbag | json}} -->
     
   </body>
 </html>
